# argos

./: .env.example  .gitignore  README.md  pyproject.toml
examples/: pet_profile.json  questionnaire_cat.json  questionnaire_dog.json
scripts/: demo.sh
src/pet_persona/: __init__.py  cli.py  config.py
src/pet_persona/conversation/: __init__.py  intent.py  memory.py  responder.py  safety.py
src/pet_persona/db/: __init__.py  models.py  repo.py  session.py
src/pet_persona/ingest/: __init__.py  cache.py  models.py  rate_limit.py  wikipedia.py  youtube.py
src/pet_persona/profile/: __init__.py  media.py  questionnaire.py  snapshots.py  updater.py
src/pet_persona/retrieval/: __init__.py  embeddings.py  vector_store.py
src/pet_persona/speech/: __init__.py  mic.py  stt.py  tts.py
src/pet_persona/traits/: __init__.py  catalog.py  lexicon.py  scorer.py  traits_catalog.json  traits_lexicon.json
src/pet_persona/utils/: __init__.py  logging.py  text.py
src/pet_persona/voice/: __init__.py  generator.py  templates.py
tests/: __init__.py  conftest.py  test_blending.py  test_conversation.py  test_traits.py  test_voice.py  test_wikipedia_ingest.py
